<resources>
    <string name="app_name">BexWorkFloww</string>
    <string name="bexlogo">bexlogo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="anasayfa">Ana Sayfa</string>
    <string name="adres_defteri">Adres Defteri</string>
    <string name="user_gmail">tolgahan.tutar@gmail.com</string>
    <string name="user_name">Tolgahan TUTAR</string>
    <string name="nullLabel"></string>
    <string name="Phone">Telefon</string>
    <string name="Email">E-mail</string>
    <string name="Address">Adres</string>
    <string name="webAddress">Web Adresi</string>
    <string name="Logout">Çıkış</string>
    <string name="filter">Filtrele</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="todo">TODO</string>
    <string name="bexfa_administrator">Bexfa Administrator</string>
    <string name="save_profile">KAYDET</string>
    <string name="telefon">Telefon</string>
    <string name="WebAddress">Web Adresi</string>
    <string name="loading">Yükleniyor...</string>
    <string name="update_address">Adres Güncelle.</string>
    <string name="enter_address">Adresi girin</string>
    <string name="enter_priority">Priority girin</string>
    <string name="update">Güncelle</string>
    <string name="cancel">Vazgeç</string>
    <string name="delete_address_operation">Adres Silme İşlemi</string>
    <string name="sure_delete_address">\"Adresi silmek istediğinize emin misiniz ? \"</string>
    <string name="update_email">Email Güncelle.</string>
    <string name="type_your_mail_please">Emailinizi Yazın.</string>
    <string name="email_delete_operation">Email Silme İşlemi</string>
    <string name="sure_delete_mail">\"Maili silmek istediğinize emin misiniz ? \"</string>
    <string name="update_phone">Telefon Güncelle.</string>
    <string name="type_your_phone_please">Telefonunuzu Yazın.</string>
    <string name="delete_phone_operation">Telefon Silme İşlemi</string>
    <string name="sure_delete_phone">\"Telefonu silmek istediğinize emin misiniz ? \"</string>
    <string name="delete_phone">Sil</string>
    <string name="update_web_adress_operation">Web Adresi Güncelle.</string>
    <string name="enter_your_web_address">Web Adresinizi Yazın.</string>
    <string name="update_web_address">Güncelle</string>
    <string name="delete_web_address_operation">Web Adres Silme İşlemi</string>
    <string name="sure_delete_web_address">\"Web adresi silmek istediğinize emin misiniz ? \"</string>
    <string name="delete_web_address">Sil</string>
    <string name="property_cannot_be_null">Bu alan boş bırakılamaz!</string>
    <string name="create_email_operation">Email Oluşturma İşlemi</string>
    <string name="create_text">Oluştur</string>
    <string name="invalid_email">Geçersiz format! örn: bexfa@bexfa.com</string>
    <string name="invalid_phone">Geçersiz format! örn: +905373822275</string>
    <string name="create_phone_operation">Telefon Oluşturma İşlemi</string>
    <string name="create_address_operation">Adres Oluşturma İşlemi</string>
    <string name="enter_address">Adresi girin</string>
    <string name="create_web_address_operation">Web Adresi Oluşturma İşlemi</string>
</resources>